k8s/tremplin-app/ingress-tremplin-app.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tremplin-app${BRANCH_NAME}
  labels:
    app: tremplin-app${BRANCH_NAME}
    branch: tremplin${BRANCH_NAME}
spec:
  rules:
  - host: tremplin${BRANCH_NAME}.${ENVIRONMENT}.factory.social.gouv.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: tremplin-app${BRANCH_NAME}
          servicePort: ${PORT}
